--- a/src/General/css/icons.vert.css
+++ b/src/General/css/icons.vert.css
@@ -24,10 +24,6 @@ body::after {
 .slideout-watcher #watcher::after {
   top: #{position[i++]}px !important;
 }
-/* 4sight */
-body > a[style="cursor: pointer; float: right;"]::after {
-  top: #{position[i++]}px;
-}
 /* ExLinks */
 #navtopright .exlinksOptionsLink::after {
   top: #{position[i++]}px;
@@ -62,8 +58,7 @@ body::after {
 #globalMessage::after,
 #img-controls,
 #fappeTyme,
-#{if _conf["Slideout Watcher"] then "#watcher::after," else ""}
-body > a[style="cursor: pointer; float: right;"]::after,
+.slideout-watcher #watcher::after,
 #catalog::after,
 div.navLinks > a:first-of-type::after {
   #{align}: 3px !important;
@@ -72,7 +67,7 @@ div.navLinks > a:first-of-type::after {
 #globalMessage,
 .slideout-watcher #watcher.dialog {
   <%= sizing %>: border-box;
-  width: 230px !important;
+  width: 232px !important;
   #{align}: 18px !important;
 }
 .sidebar-large #boardNavDesktopFoot,
