--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -192,6 +192,7 @@ th {
 #header-bar {
   z-index: 6;
   border-width: 1px;
+  padding: 0 2px;
 }
 .pagination-sticky-top .pagelist,
 .pagination-sticky-bottom .pagelist,
