--- a/src/General/css/dynamic.css
+++ b/src/General/css/dynamic.css
@@ -55,7 +55,7 @@ a.useremail:last-of-type::before {
 a.useremail:last-of-type::after {
   margin-left: #{parseInt _conf['Emoji Spacing']}px;
 }
-#mascot img {
+#mascot {
   opacity: #{Conf['Mascot Opacity']};
 }
 #{unless _conf["Emoji"] is "disable" then Emoji.css _conf["Emoji Position"] else ""}
