--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1645,69 +1645,61 @@ a:only-of-type > .remove {
 /* Mascot Positions */
 #mascot {
   display: none;
-}
-#mascot img {
   position: fixed;
   z-index: -1;
-  bottom: 18.5em;
-  cursor: pointer;
+  bottom: 0;
   left: 0;
   right: 0;
+  line-height: 0;
+  cursor: pointer;
+}
+.mascot-position-default.post-form-style-fixed #qr #mascot,
+.mascot-position-default.post-form-style-transparent-fade #qr #mascot {
+  position: absolute;
+  bottom: 100%;
+  margin-bottom: -2px;
+}
+.mascot-position-default.post-form-style-fixed.post-form-decorations #qr #mascot,
+.mascot-position-default.post-form-style-transparent-fade.post-form-decorations #qr #mascot {
+  margin-bottom: 1px;
 }
 .mascots #mascot {
   display: block;
 }
-.sidebar-location-left #mascot img {
-  <%= sizing %>transform: scaleX(-1);
-}
-.sidebar-location-right.mascot-location-sidebar #mascot img,
-.sidebar-location-left.mascot-location-opposite #mascot img {
+.sidebar-location-right.mascot-location-sidebar #mascot,
+.sidebar-location-left.mascot-location-opposite #mascot {
   left: auto;
+}
+.sidebar-location-left.mascot-location-sidebar #mascot,
+.sidebar-location-right.mascot-location-opposite #mascot {
+  right: auto;
 }
 .sidebar-location-left.mascot-location-sidebar #mascot img,
 .sidebar-location-right.mascot-location-opposite #mascot img {
-  right: auto;
+  <%= agent %>transform: scaleX(-1);
 }
-.fourchan-ss-navigation.bottom.fixed.posting-disabled #mascot img,
-.fourchan-ss-navigation.bottom.fixed.mascot-position-bottom #mascot img,
-.fourchan-ss-navigation.index.pagination-sticky-bottom.mascot-position-bottom #mascot img,
-.fourchan-ss-navigation.bottom.fixed:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot img,
-.fourchan-ss-navigation.index.pagination-sticky-bottom:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot img {
-  bottom: 1.5em;
+.fourchan-ss-navigation.bottom.fixed.qr-hidden #mascot,
+.fourchan-ss-navigation.bottom.fixed.mascot-position-bottom #mascot,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.mascot-position-bottom #mascot,
+.fourchan-ss-navigation.bottom.fixed:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot,
+.fourchan-ss-navigation.index.pagination-sticky-bottom:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot {
+  bottom: 1.5em
 }
-.fourchan-ss-navigation.bottom.fixed.post-form-style-fixed #mascot img,
-.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-fixed #mascot img,
-.fourchan-ss-navigation.bottom.fixed.post-form-style-transparent-fade #mascot img,
-.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-transparent-fade #mascot img {
-  bottom: 20.1em;
+#qr #mascot {
+  z-index: -1;
 }
-.post-form-style-fixed.show-post-form-header #mascot img,
-.post-form-style-transparent-fade.show-post-form-header #mascot img {
-  bottom: 20.3em;
-}
-.fourchan-ss-navigation.bottom.fixed.show-post-form-header.post-form-style-fixed #mascot img,
-.fourchan-ss-navigation.index.pagination-sticky-bottom.show-post-form-header.post-form-style-fixed #mascot img,
-.fourchan-ss-navigation.bottom.fixed.show-post-form-header.post-form-style-transparent-fade #mascot img,
-.fourchan-ss-navigation.index.pagination-sticky-bottom.show-post-form-header.post-form-style-transparent-fade #mascot img {
-  bottom: 21.6em;
-}
-.mascot-position-default:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot img,
-.mascot-position-bottom #mascot img,
-.mascot-position-default.posting-disabled #mascot img {
-  bottom: 0;
-}
-.mascots-overlap-posts #mascot img {
+.mascots-overlap-posts #mascot {
   z-index: 3;
 }
-.mascot-position-middle #mascot img {
+.mascot-position-middle #mascot {
   bottom: 50% !important;
   <%= agent %>transform: translateY(50%);
 }
-.mascot-position-top #mascot img {
+.mascot-position-top #mascot {
   bottom: auto !important;
   top: 17px;
 }
-.grayscale-mascots #mascot img {
+.grayscale-mascot #mascot {
   <%= filter %>: url('#grayscale');
 }
 /* Options */
@@ -1965,7 +1957,7 @@ article li {
   opacity: 0;
   <%= agent %>transition: opacity .3s linear;
 }
-.mascot:hover #mascot-options {
+.mascot:hover::after-options {
   opacity: 1;
 }
 #mascot-options {
