--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1659,6 +1659,8 @@ a:only-of-type > .remove {
   bottom: 100%;
   margin-bottom: -2px;
 }
+.mascot-position-above-post-form.post-form-style-fixed.post-form-decorations #qr #mascot,
+.mascot-position-above-post-form.post-form-style-transparent-fade.post-form-decorations #qr #mascot,
 .mascot-position-default.post-form-style-fixed.post-form-decorations #qr #mascot,
 .mascot-position-default.post-form-style-transparent-fade.post-form-decorations #qr #mascot {
   margin-bottom: 1px;
