--- a/src/General/css/theme.css
+++ b/src/General/css/theme.css
@@ -135,6 +135,7 @@ textarea.field:focus {
 #mouseover,
 #post-preview,
 #qp .post,
+#threads > .thread,
 #xupdater,
 .box-outer,
 .reply.post {
@@ -155,6 +156,7 @@ textarea.field:focus {
   border-color: #{theme["Navigation Border"]};
 }
 #doc,
+#threads,
 .board > .thread {
   background: #{theme["Thread Wrapper Background"]};
   border: 1px solid #{theme["Thread Wrapper Border"]};
@@ -344,16 +346,17 @@ a .name {
 #fappeTyme {
   #{unless Style.lightTheme then "<%= filter %>: url(\"#icons-filter\");" else ""}
 }
-.alternate-post-colors .replyContainer:not(.hidden):nth-of-type(2n+1) .post {
-  background-image: linear-gradient(#{if Style.lightTheme then "rgba(0,0,0,0.05), rgba(0,0,0,0.05)" else "rgba(255,255,255,0.02), rgba(255,255,255,0.02)"});
+.alternate-post-colors #threads > .thread:nth-of-type(2n+1),
+.alternate-post-colors .replyContainer:nth-of-type(2n+1) .post {
+  background-image: linear-gradient(#{if replybg then ("rgba(" + (replybg.shiftRGB -4, false) + ",0.8), rgba(" + (replybg.shiftRGB -4, false) + ",0.8)") else if Style.lightTheme then "rgba(0,0,0,0.05), rgba(0,0,0,0.05)" else "rgba(255,255,255,0.02), rgba(255,255,255,0.02)"});
 }
 .color-reply-headings .boxbar,
 .color-reply-headings .postInfo {
-  background: #{if (replyHeading = new Style.color Style.colorToHex theme["Reply Background"]) then "rgba(" + (replyHeading.shiftRGB -12, false) + ",0.8)" else "rgba(0,0,0,0.1)"};
+  background: #{if replybg then "rgba(" + (replybg.shiftRGB -12, false) + ",0.8)" else "rgba(0,0,0,0.1)"};
   border-bottom: 1px solid #{theme["Reply Border"]}
 }
 .color-file-info .file {
-  background: #{if (fileHeading = new Style.color Style.colorToHex theme["Reply Background"]) then "rgba(" + (fileHeading.shiftRGB -8, false) + ",0.8)" else "rgba(0,0,0,0.1)"};
+  background: #{if replybg then "rgba(" + (replybg.shiftRGB -8, false) + ",0.8)" else "rgba(0,0,0,0.1)"};
   border-bottom: 1px solid #{theme["Reply Border"]}
   border-top: 1px solid #{theme["Reply Border"]}
 }
