Apparently the syntax for linear gradients changed and nobody told me. Hah hah. This fixes gradients in Chrome and Nightly

--- a/src/General/css/jscolor.css
+++ b/src/General/css/jscolor.css
@@ -22,7 +22,7 @@
 .jscPad {
   width: 181px;
   height: 101px;
-  background-image: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)), linear-gradient(left, #f00, #ff0, #0f0, #0ff, #00f, #f0f, #f00);
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1)), linear-gradient(to right, rgb(255,0,0), rgb(255,255,0), rgb(0,255,0), rgb(0,255,255), rgb(0,0,255), rgb(255,0,255), rgb(255,0,0));
   background-repeat: no-repeat;
   background-position: 0 0;
 }
