--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -874,6 +874,7 @@ input.field.tripped:not(:hover):not(:focus) {
   text-shadow: 0 1px 1px #000;
   -moz-transition: opacity .25s ease-in-out;
   vertical-align: top;
+  background-size: cover;
 }
 .qr-preview:hover,
 .qr-preview:focus {
